--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-daterangepicker": "^8.0.0",
+    "react-bootstrap-tagsinput": "^0.7.6",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.14.7",
     "react-perfect-scrollbar": "^1.5.8",
