--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "draftjs-to-html": "^0.9.1",
     "html-to-draftjs": "^1.5.0",
     "https-browserify": "^1.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-daterangepicker": "^8.0.0",
